<resources>
    <string name="app_name">TMDb</string>

    <string name="str_main_title_grid">表格</string>
    <string name="str_main_title_list">列表</string>
    <string name="str_main_search_text">搜索</string>
    <string name="str_main_help_text">按menu键排序</string>

    <string name="str_content_module_tv">电视剧</string>
    <string name="str_content_module_movie">电影</string>
    <string name="str_content_module_favorite">收藏</string>

    <string name="str_content_item_statue_loading">Loading...</string>

    <string name="str_dialog_filter_title">排序</string>
    <string name="str_dialog_filter_item_pop_desc">热门降序</string>
    <string name="str_dialog_filter_item_pop_asc">热门升序</string>
    <string name="str_dialog_filter_item_average_desc">评分降序</string>
    <string name="str_dialog_filter_item_average_asc">评分升序</string>
    <string name="str_dialog_filter_item_date_desc">上映时间降序</string>
    <string name="str_dialog_filter_item_date_asc">上映时间升序</string>

    <string name="str_detail_director">导演:</string>
    <string name="str_detail_writer">编剧:</string>
    <string name="str_detail_cast">主演:</string>
    <string name="str_detail_date">上映时间:</string>
    <string name="str_detail_duration">片长:</string>
    <string name="str_detail_language">语言:</string>
    <string name="str_detail_overview">简介:</string>
    <string name="str_detail_average">平均评分</string>
    <string name="str_detail_recommend">推荐</string>
    <string name="str_detail_runtime">%d分钟</string>

    <string name="str_search_result">搜索结果</string>
    <string name="str_search_result_show">共%d条</string>
</resources>